--- a/MainSms/MainSms.csproj
+++ b/MainSms/MainSms.csproj
@@ -12,9 +12,10 @@
     <PackageIcon>logo.png</PackageIcon>
     <PackageTags>mainsms, mainsms.ru, sms, send sms</PackageTags>
     <PackageId>mainsms_official</PackageId>
-    <Version>1.0.7</Version>
-    <AssemblyVersion>1.0.7.0</AssemblyVersion>
+    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <RepositoryUrl>https://github.com/k0r1sh/mainsms_official</RepositoryUrl>
+    <PackageReleaseNotes>All available API supported</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard1.4|AnyCPU'">
